fix(NorBertSentimentTranslator): change method to retrieve logits from NDList